add put seasons
